Added movie fighter

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,11 @@
           <div class="row">
             <div class="col-sm-6">
               <div class="card">
-                <p>Entry One</p>
+                <img class="card-img-top" src="Assets/Images/movieFighter.png" alt="Movie Fighter title screen">
+                <div class="card-body">
+                  <p class="card-text">Movie Fighter</p>
+                  <a href="https://github.com/AvianOverlord/Movie-Fighter">Link to Github</a>
+                </div>
               </div>
             </div>
             <div class="col-sm-6">
